clean up C code with a simple C++ routine

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,20 @@
 # Object files
 *.o
-*.ko
-*.obj
-*.elf
 
 # Libraries
-*.lib
 *.a
 
 # Shared objects (inc. Windows DLLs)
-*.dll
 *.so
 *.so.*
-*.dylib
 
 # Executables
 *.exe
 *.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-affinity.omp
-affinity.mpi
+
+test.omp
+test.mpi
+
+*.swp
+*.swn
+*.swo
