--- a/makefile.cray
+++ b/makefile.cray
@@ -1,3 +1,4 @@
+CC=CC
 flags=-std=c++11
 ifeq ($(PE_ENV),GNU)
 	flags+=-fopenmp
@@ -9,10 +10,10 @@ endif
 all : test.omp test.mpi
 
 test.omp: test_omp.cpp
-	CC $(flags) test_omp.cpp -o test.omp
+	$(CC) $(flags) test_omp.cpp -o test.omp
 
 test.mpi: test_mpi.cpp
-	CC $(flags) test_mpi.cpp -o test.mpi
+	$(CC) $(flags) test_mpi.cpp -o test.mpi
 
 clean:
 	rm -rf test.omp
