add cuda version to CMake and clean up

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.14)
+cmake_minimum_required(VERSION 3.17)
 project(affinity)
 
 # Generate a json file with compilation commands for each file
@@ -11,11 +11,20 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(OpenMP REQUIRED)
 
-add_executable(affinity.omp test_omp.cpp)
+add_executable(affinity.omp omp.cpp)
 target_link_libraries(affinity.omp PRIVATE OpenMP::OpenMP_CXX)
 
 find_package(MPI)
 if(MPI_FOUND)
-    add_executable(affinity.mpi test_mpi.cpp)
+    add_executable(affinity.mpi mpi.cpp)
     target_link_libraries(affinity.mpi PRIVATE OpenMP::OpenMP_CXX MPI::MPI_CXX)
+endif()
+
+find_package(CUDAToolkit 10)
+if(CUDAToolkit_FOUND)
+    enable_language(CUDA)
+    add_executable(affinity.gpu gpu.cpp cuda.cpp)
+    message(STATUS "----------- ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}")
+    target_include_directories(affinity.gpu PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
+    target_link_libraries(affinity.gpu PRIVATE OpenMP::OpenMP_CXX MPI::MPI_CXX CUDA::cudart)
 endif()
