--- a/ci/gitlab-ci.yml
+++ b/ci/gitlab-ci.yml
@@ -26,4 +26,5 @@ run-test:
   script:
     - echo '+++++++++++++++++++++++++++++++'
     - pwd
-    - ./affinity.omp
+    - ls -ahl
+    - ./build/affinity.omp
