first working hip support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,3 +27,20 @@ if(CUDAToolkit_FOUND)
     target_include_directories(affinity.gpu PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
     target_link_libraries(affinity.gpu PRIVATE OpenMP::OpenMP_CXX MPI::MPI_CXX CUDA::cudart)
 endif()
+
+option(ROCM "target ROCM" OFF)
+if (ROCM)
+    if(DEFINED ENV{ROCM_PATH})
+        set(ROCM_PATH $ENV{ROCM_PATH})
+    else()
+        message(FATAL_ERROR "Unable to find ROCM environment")
+    endif()
+    set(SMI_PATH "${ROCM_PATH}/rocm_smi")
+    set(HIP_PATH "${ROCM_PATH}/hip")
+    add_executable(affinity.hip hip.cpp)
+    target_compile_definitions(affinity.hip PRIVATE __HIP_PLATFORM_AMD__)
+    target_include_directories(affinity.hip PRIVATE "${SMI_PATH}/include/" "${HIP_PATH}/include")
+    target_link_libraries(affinity.hip PRIVATE OpenMP::OpenMP_CXX MPI::MPI_CXX)
+    target_link_libraries(affinity.hip PRIVATE -L${SMI_PATH}/lib -lrocm_smi64)
+    target_link_libraries(affinity.hip PRIVATE -L${HIP_PATH}/lib -lamdhip64)
+endif()
