improve detection and configuration of targets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,23 +18,32 @@ find_package(MPI)
 if(MPI_FOUND)
     add_executable(affinity.mpi mpi.cpp)
     target_link_libraries(affinity.mpi PRIVATE OpenMP::OpenMP_CXX MPI::MPI_CXX)
+else()
+    message("Unable to configure MPI target")
 endif()
 
 find_package(CUDAToolkit 10)
-if(CUDAToolkit_FOUND)
+if (CUDAToolkit_FOUND AND MPI_FOUND)
+    set(CUDA TRUE)
+else()
+    message("Unable to configure CUDA target")
+endif()
+
+if(CUDA)
     enable_language(CUDA)
     add_executable(affinity.gpu gpu.cpp cuda.cpp)
     target_include_directories(affinity.gpu PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
     target_link_libraries(affinity.gpu PRIVATE OpenMP::OpenMP_CXX MPI::MPI_CXX CUDA::cudart)
 endif()
 
-option(ROCM "target ROCM" OFF)
+if(DEFINED ENV{ROCM_PATH} AND MPI_FOUND)
+    set(ROCM_PATH $ENV{ROCM_PATH})
+    set(ROCM TRUE)
+else()
+    message("Unable to congifure ROCM target")
+endif()
+
 if (ROCM)
-    if(DEFINED ENV{ROCM_PATH})
-        set(ROCM_PATH $ENV{ROCM_PATH})
-    else()
-        message(FATAL_ERROR "Unable to find ROCM environment")
-    endif()
     set(SMI_PATH "${ROCM_PATH}/rocm_smi")
     set(HIP_PATH "${ROCM_PATH}/hip")
     add_executable(affinity.hip hip.cpp)
