--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,9 +31,10 @@ endif()
 
 if(CUDA)
     enable_language(CUDA)
-    add_executable(affinity.gpu gpu.cpp cuda.cpp)
-    target_include_directories(affinity.gpu PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
-    target_link_libraries(affinity.gpu PRIVATE OpenMP::OpenMP_CXX MPI::MPI_CXX CUDA::cudart)
+    add_executable(affinity.cuda gpu.cpp cuda.cpp)
+    target_include_directories(affinity.cuda PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
+    target_compile_definitions(affinity.cuda PRIVATE AFFINITY_CUDA)
+    target_link_libraries(affinity.cuda PRIVATE OpenMP::OpenMP_CXX MPI::MPI_CXX CUDA::cudart)
 endif()
 
 if(DEFINED ENV{ROCM_PATH} AND MPI_FOUND)
@@ -46,10 +47,11 @@ endif()
 if (ROCM)
     set(SMI_PATH "${ROCM_PATH}/rocm_smi")
     set(HIP_PATH "${ROCM_PATH}/hip")
-    add_executable(affinity.hip hip.cpp)
-    target_compile_definitions(affinity.hip PRIVATE __HIP_PLATFORM_AMD__)
-    target_include_directories(affinity.hip PRIVATE "${SMI_PATH}/include/" "${HIP_PATH}/include")
-    target_link_libraries(affinity.hip PRIVATE OpenMP::OpenMP_CXX MPI::MPI_CXX)
-    target_link_libraries(affinity.hip PRIVATE -L${SMI_PATH}/lib -lrocm_smi64)
-    target_link_libraries(affinity.hip PRIVATE -L${HIP_PATH}/lib -lamdhip64)
+    add_executable(affinity.rocm gpu.cpp rocm.cpp)
+    target_compile_definitions(affinity.rocm PRIVATE __HIP_PLATFORM_AMD__)
+    target_compile_definitions(affinity.rocm PRIVATE AFFINITY_ROCM)
+    target_include_directories(affinity.rocm PRIVATE "${SMI_PATH}/include/" "${HIP_PATH}/include")
+    target_link_libraries(affinity.rocm PRIVATE OpenMP::OpenMP_CXX MPI::MPI_CXX)
+    target_link_libraries(affinity.rocm PRIVATE -L${SMI_PATH}/lib -lrocm_smi64)
+    target_link_libraries(affinity.rocm PRIVATE -L${HIP_PATH}/lib -lamdhip64)
 endif()
