new rules to install

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,3 +55,15 @@ if (ROCM)
     target_link_libraries(affinity.rocm PRIVATE -L${SMI_PATH}/lib -lrocm_smi64)
     target_link_libraries(affinity.rocm PRIVATE -L${HIP_PATH}/lib -lamdhip64)
 endif()
+
+# Install rules
+install(TARGETS affinity.omp DESTINATION bin)
+if(MPI_FOUND)
+    install(TARGETS affinity.mpi DESTINATION bin)
+endif()
+if(CUDA)
+    install(TARGETS affinity.cuda DESTINATION bin)
+endif()
+if(ROCM)
+    install(TARGETS affinity.rocm DESTINATION bin)
+endif()
