--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(OpenMP REQUIRED)
 
-add_executable(affinity.omp omp.cpp)
+add_executable(affinity.omp omp.cpp util.cpp)
 target_link_libraries(affinity.omp PRIVATE OpenMP::OpenMP_CXX)
 
 find_package(MPI)
 if(MPI_FOUND)
-    add_executable(affinity.mpi mpi.cpp)
+    add_executable(affinity.mpi mpi.cpp util.cpp)
     target_link_libraries(affinity.mpi PRIVATE OpenMP::OpenMP_CXX MPI::MPI_CXX)
 else()
     message("Unable to configure MPI target")
@@ -31,7 +31,7 @@ endif()
 
 if(CUDA)
     enable_language(CUDA)
-    add_executable(affinity.cuda gpu.cpp cuda.cpp)
+    add_executable(affinity.cuda gpu.cpp cuda.cpp util.cpp)
     target_include_directories(affinity.cuda PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
     target_compile_definitions(affinity.cuda PRIVATE AFFINITY_CUDA)
     target_link_libraries(affinity.cuda PRIVATE OpenMP::OpenMP_CXX MPI::MPI_CXX CUDA::cudart)
@@ -41,13 +41,13 @@ if(DEFINED ENV{ROCM_PATH} AND MPI_FOUND)
     set(ROCM_PATH $ENV{ROCM_PATH})
     set(ROCM TRUE)
 else()
-    message("Unable to congifure ROCM target")
+    message("Unable to configure ROCM target")
 endif()
 
 if (ROCM)
     set(SMI_PATH "${ROCM_PATH}/rocm_smi")
     set(HIP_PATH "${ROCM_PATH}/hip")
-    add_executable(affinity.rocm gpu.cpp rocm.cpp)
+    add_executable(affinity.rocm gpu.cpp rocm.cpp util.cpp)
     target_compile_definitions(affinity.rocm PRIVATE __HIP_PLATFORM_AMD__)
     target_compile_definitions(affinity.rocm PRIVATE AFFINITY_ROCM)
     target_include_directories(affinity.rocm PRIVATE "${SMI_PATH}/include/" "${HIP_PATH}/include")
